--- a/DialogueGCN_RNN.ipynb
+++ b/DialogueGCN_RNN.ipynb
@@ -41,6 +41,31 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "ywo5IE-DqQKx",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "9e7deddb-2df2-4214-c859-4d9ed217e03e"
+      },
+      "source": [
+        "print('test')"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "test\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "ffL9Ngmv9LgA",
         "colab_type": "code",
         "colab": {
@@ -458,6 +483,19 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "11mzB5W-pbAh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
