--- a/DialogueRNN_IEMOCAP.ipynb
+++ b/DialogueRNN_IEMOCAP.ipynb
@@ -489,13 +489,25 @@
       "metadata": {
         "id": "11mzB5W-pbAh",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "202f2315-cf5e-4bd0-cfbd-091e8cd741ec"
       },
       "source": [
-        ""
+        "print (\"test done\")"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "test done\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
