Removed test -- Vaibhav

--- a/DialogueRNN_IEMOCAP.ipynb
+++ b/DialogueRNN_IEMOCAP.ipynb
@@ -41,31 +41,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ywo5IE-DqQKx",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "9e7deddb-2df2-4214-c859-4d9ed217e03e"
-      },
-      "source": [
-        "print('test')"
-      ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "test\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "ffL9Ngmv9LgA",
         "colab_type": "code",
         "colab": {
@@ -489,25 +464,13 @@
       "metadata": {
         "id": "11mzB5W-pbAh",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "202f2315-cf5e-4bd0-cfbd-091e8cd741ec"
+        "colab": {}
       },
       "source": [
-        "print (\"test done\")"
+        ""
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "test done\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
