GRUCell Info updated

--- a/Practice_Workspace.ipynb
+++ b/Practice_Workspace.ipynb
@@ -6,7 +6,7 @@
       "name": "Practice Workspace.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMF1t6K4ZbalPAvTvSdEzzC",
+      "authorship_tag": "ABX9TyPd2Ow8VdkEl9tyqyz94JPc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -116,7 +116,7 @@
         "from model import BiModel, Model, MaskedNLLLoss\n",
         "from dataloader import IEMOCAPDataset"
       ],
-      "execution_count": 5,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -209,7 +209,7 @@
         "    avg_fscore = round(f1_score(labels,preds,sample_weight=masks,average='weighted')*100,2)\n",
         "    return avg_loss, avg_accuracy, labels, preds, masks,avg_fscore, [alphas, alphas_f, alphas_b, vids]"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -222,7 +222,7 @@
         "n_classes  = 6\n",
         "n_epochs   = 60"
       ],
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -238,7 +238,7 @@
         "D_h = 300\n",
         "D_a = 100 # concat attention"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -254,7 +254,7 @@
         "                dropout_rec=0.1,\n",
         "                dropout=0.4)"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -273,7 +273,7 @@
         "                                      ])\n",
         "loss_function = MaskedNLLLoss()"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -286,7 +286,7 @@
         "                           lr=0.0003,\n",
         "                           weight_decay=0.0)"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -301,7 +301,7 @@
         "                                batch_size=batch_size,\n",
         "                                num_workers=2)"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -312,7 +312,7 @@
       "source": [
         "best_loss, best_label, best_pred, best_mask = None, None, None, None"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -373,6 +373,50 @@
             "tags": []
           },
           "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "g5-CiA51WPUi"
+      },
+      "source": [
+        "**nn.GRUCell : (input_size, hidden_size, bias (bool, default: True) )**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VfjmQJ-PVerm"
+      },
+      "source": [
+        "test_cell = nn.GRUCell(100,100,True)"
+      ],
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "X0EYbBXuVy6K",
+        "outputId": "6de82c7c-58cb-426f-bfe2-1d632ef8b53b",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "print(test_cell)"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "GRUCell(100, 100)\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
