Fixing epoch errors

--- a/Practice_Workspace.ipynb
+++ b/Practice_Workspace.ipynb
@@ -6,7 +6,7 @@
       "name": "Practice Workspace.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPd2Ow8VdkEl9tyqyz94JPc",
+      "authorship_tag": "ABX9TyNOiJD//LMx5FBGtghKPuGp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "qM5GZTrvuE1u",
-        "outputId": "754cc7ac-786a-413a-d91b-35bedd590e34",
+        "outputId": "1ffb30fd-2703-4f23-9947-1e18e67894f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -40,7 +40,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -55,7 +55,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "tXlhBuXyuSOu",
-        "outputId": "0b2118d8-a567-4d32-80ed-2ef857456d59",
+        "outputId": "22d0040f-b9d1-4305-de9d-3d3ce091b395",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -64,7 +64,7 @@
       "source": [
         "%cd /content/gdrive/My Drive/DialogueRNN"
       ],
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -83,7 +83,7 @@
       "source": [
         "# !python train_IEMOCAP.py --dropout 0.4 --lr 0.0003 --batch-size 32 --class-weight --l2 0.0"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -116,7 +116,7 @@
         "from model import BiModel, Model, MaskedNLLLoss\n",
         "from dataloader import IEMOCAPDataset"
       ],
-      "execution_count": 9,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -209,7 +209,7 @@
         "    avg_fscore = round(f1_score(labels,preds,sample_weight=masks,average='weighted')*100,2)\n",
         "    return avg_loss, avg_accuracy, labels, preds, masks,avg_fscore, [alphas, alphas_f, alphas_b, vids]"
       ],
-      "execution_count": 10,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -222,7 +222,7 @@
         "n_classes  = 6\n",
         "n_epochs   = 60"
       ],
-      "execution_count": 11,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -238,7 +238,7 @@
         "D_h = 300\n",
         "D_a = 100 # concat attention"
       ],
-      "execution_count": 12,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -254,7 +254,7 @@
         "                dropout_rec=0.1,\n",
         "                dropout=0.4)"
       ],
-      "execution_count": 13,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -273,7 +273,7 @@
         "                                      ])\n",
         "loss_function = MaskedNLLLoss()"
       ],
-      "execution_count": 14,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -286,7 +286,7 @@
         "                           lr=0.0003,\n",
         "                           weight_decay=0.0)"
       ],
-      "execution_count": 15,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -301,7 +301,7 @@
         "                                batch_size=batch_size,\n",
         "                                num_workers=2)"
       ],
-      "execution_count": 16,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -312,14 +312,14 @@
       "source": [
         "best_loss, best_label, best_pred, best_mask = None, None, None, None"
       ],
-      "execution_count": 17,
+      "execution_count": 11,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "0CkTsjLcyweR",
-        "outputId": "30d54276-a6e2-4cd0-b3e6-66a25bfce292",
+        "outputId": "fff26716-de0a-4c34-d1b8-a5c08cc97169",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 571
@@ -328,7 +328,7 @@
       "source": [
         "model.train()"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -372,7 +372,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 12
         }
       ]
     },
@@ -393,31 +393,16 @@
       "source": [
         "test_cell = nn.GRUCell(100,100,True)"
       ],
-      "execution_count": 20,
+      "execution_count": 13,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "X0EYbBXuVy6K",
-        "outputId": "6de82c7c-58cb-426f-bfe2-1d632ef8b53b",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
+        "id": "NA4Hu3RbQS5j"
       },
       "source": [
-        "print(test_cell)"
-      ],
-      "execution_count": 22,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "GRUCell(100, 100)\n"
-          ],
-          "name": "stdout"
-        }
+        "**Do not run below this**"
       ]
     },
     {
