Added Modular train_or_eval_model

--- a/Practice_Workspace.ipynb
+++ b/Practice_Workspace.ipynb
@@ -6,7 +6,7 @@
       "name": "Practice Workspace.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM3UOOUpYkgAHoD1IFzEdbX",
+      "authorship_tag": "ABX9TyPehIb3zCGHC5RBs4akU/L/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "qM5GZTrvuE1u",
-        "outputId": "1ffb30fd-2703-4f23-9947-1e18e67894f9",
+        "outputId": "3d1ed259-42b2-444b-fd1b-0ffdd7beb958",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -40,7 +40,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -55,7 +55,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "tXlhBuXyuSOu",
-        "outputId": "22d0040f-b9d1-4305-de9d-3d3ce091b395",
+        "outputId": "df6b4a22-8fd6-44bd-8fb1-0c5c0e6fcb69",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -64,7 +64,7 @@
       "source": [
         "%cd /content/gdrive/My Drive/DialogueRNN"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -116,7 +116,7 @@
         "from model import BiModel, Model, MaskedNLLLoss\n",
         "from dataloader import IEMOCAPDataset"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -209,7 +209,7 @@
         "    avg_fscore = round(f1_score(labels,preds,sample_weight=masks,average='weighted')*100,2)\n",
         "    return avg_loss, avg_accuracy, labels, preds, masks,avg_fscore, [alphas, alphas_f, alphas_b, vids]"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -223,7 +223,7 @@
         "cuda = torch.cuda.is_available()\n",
         "n_epochs   = 60"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -239,7 +239,7 @@
         "D_h = 300\n",
         "D_a = 100 # concat attention"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -255,91 +255,23 @@
         "                dropout_rec=0.1,\n",
         "                dropout=0.4)"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6cBPiCy5POy2"
-      },
-      "source": [
-        "loss_weights = torch.FloatTensor([\n",
-        "                                    1/0.086747,\n",
-        "                                    1/0.144406,\n",
-        "                                    1/0.227883,\n",
-        "                                    1/0.160585,\n",
-        "                                    1/0.127711,\n",
-        "                                    1/0.252668,\n",
-        "                                      ])"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "uNJPSX7sRpLh"
-      },
-      "source": [
-        "loss_function = MaskedNLLLoss(loss_weights.cuda())"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "qj8mxon1Qy6z"
-      },
-      "source": [
-        "optimizer = optim.Adam(model.parameters(),\n",
-        "                           lr=0.0003,\n",
-        "                           weight_decay=0.0)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "pFqtw1-YAYEG"
-      },
-      "source": [
-        "train_loader, valid_loader, test_loader =\\\n",
-        "            get_IEMOCAP_loaders('./IEMOCAP_features/IEMOCAP_features_raw.pkl',\n",
-        "                                valid=0.0,\n",
-        "                                batch_size=batch_size,\n",
-        "                                num_workers=2)"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "0lzL1y8lAjRC"
-      },
-      "source": [
-        "best_loss, best_label, best_pred, best_mask = None, None, None, None"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "0CkTsjLcyweR",
-        "outputId": "fb35cae1-9f28-4aa1-945a-0bcf645aa7ca",
+        "id": "ikG20RdW751V",
+        "outputId": "4b5cd1a6-f5de-4edd-d64b-410b65e83bb8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 571
         }
       },
       "source": [
-        "model.train()"
+        "model.cuda()"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -383,9 +315,77 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 8
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6cBPiCy5POy2"
+      },
+      "source": [
+        "loss_weights = torch.FloatTensor([\n",
+        "                                    1/0.086747,\n",
+        "                                    1/0.144406,\n",
+        "                                    1/0.227883,\n",
+        "                                    1/0.160585,\n",
+        "                                    1/0.127711,\n",
+        "                                    1/0.252668,\n",
+        "                                      ])"
+      ],
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uNJPSX7sRpLh"
+      },
+      "source": [
+        "loss_function = MaskedNLLLoss(loss_weights.cuda())"
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qj8mxon1Qy6z"
+      },
+      "source": [
+        "optimizer = optim.Adam(model.parameters(),\n",
+        "                           lr=0.0003,\n",
+        "                           weight_decay=0.0)"
+      ],
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pFqtw1-YAYEG"
+      },
+      "source": [
+        "train_loader, valid_loader, test_loader =\\\n",
+        "            get_IEMOCAP_loaders('./IEMOCAP_features/IEMOCAP_features_raw.pkl',\n",
+        "                                valid=0.0,\n",
+        "                                batch_size=batch_size,\n",
+        "                                num_workers=2)"
+      ],
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0lzL1y8lAjRC"
+      },
+      "source": [
+        "best_loss, best_label, best_pred, best_mask = None, None, None, None"
+      ],
+      "execution_count": 13,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -416,6 +416,131 @@
         "Assigned variables from functions :\n",
         "\n",
         "Loss Function : Negative Log Likelihood"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "pQL2BswtPRvc"
+      },
+      "source": [
+        "**train_or_eval_model FUNCTION Opened HERE**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LrxB3MEvM0Ac"
+      },
+      "source": [
+        "losses = []\n",
+        "preds = []\n",
+        "labels = []\n",
+        "masks = []\n",
+        "alphas, alphas_f, alphas_b, vids = [], [], [], []"
+      ],
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_ueZrjEFNs14"
+      },
+      "source": [
+        "dataloader=train_loader"
+      ],
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Rr6dAjHzPPLF"
+      },
+      "source": [
+        "for data in dataloader:\n",
+        "  optimizer.zero_grad()\n",
+        "  textf, visuf, acouf, qmask, umask, label =\\\n",
+        "                [d.cuda() for d in data[:-1]] if cuda else data[:-1]\n",
+        "  log_prob, alpha, alpha_f, alpha_b = model(textf, qmask,umask,att2=True)\n",
+        "  lp_ = log_prob.transpose(0,1).contiguous().view(-1,log_prob.size()[2])\n",
+        "  labels_ = label.view(-1)\n",
+        "  loss = loss_function(lp_, labels_, umask)\n",
+        "  pred_ = torch.argmax(lp_,1)\n",
+        "  preds.append(pred_.data.cpu().numpy())\n",
+        "  labels.append(labels_.data.cpu().numpy())\n",
+        "  masks.append(umask.view(-1).cpu().numpy())\n",
+        "  losses.append(loss.item()*masks[-1].sum())\n",
+        "  loss.backward()\n",
+        "  optimizer.step()"
+      ],
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jPEJ1FvsQY7a"
+      },
+      "source": [
+        "if preds!=[]:\n",
+        "  preds  = np.concatenate(preds)\n",
+        "  labels = np.concatenate(labels)\n",
+        "  masks  = np.concatenate(masks)\n",
+        "else:\n",
+        "  print(float('nan'), float('nan'), [], [], [], float('nan'),[])"
+      ],
+      "execution_count": 24,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3cQbJfEOQkAD"
+      },
+      "source": [
+        "avg_loss = round(np.sum(losses)/np.sum(masks),4)\n",
+        "avg_accuracy = round(accuracy_score(labels,preds,sample_weight=masks)*100,2)\n",
+        "avg_fscore = round(f1_score(labels,preds,sample_weight=masks,average='weighted')*100,2)"
+      ],
+      "execution_count": 25,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZGLPBaEpQmbV",
+        "outputId": "622f63c1-2157-4605-e690-8bdb0d417d67",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 134
+        }
+      },
+      "source": [
+        "print(avg_loss)\n",
+        "print(avg_accuracy)\n",
+        "print(labels)\n",
+        "print(preds)\n",
+        "print(masks)\n",
+        "print(avg_fscore)\n",
+        "print([alphas, alphas_f, alphas_b, vids])"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "1.6275\n",
+            "40.34\n",
+            "[4 4 4 ... 0 0 0]\n",
+            "[2 1 2 ... 0 4 4]\n",
+            "[1. 1. 1. ... 0. 0. 0.]\n",
+            "38.64\n",
+            "[[], [], [], []]\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
